--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /LAB04_5/dist/
 /LAB04_5/build/
 /LAB04_7/nbproject/private/
+/LAB03/dist/
+/LAB05_3/nbproject/private/
+/LAB05_4/nbproject/private/
