--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 /LAB03/dist/
 /LAB05_3/nbproject/private/
 /LAB05_4/nbproject/private/
+/LAB06/nbproject/private/
+/LAB06/build/
+/LAB06/dist/
+/LAB07/nbproject/private/
+/LAB07/build/
+/LAB07/dist/
+/LAB07_2/nbproject/private/
+/LAB07_2/build/
