--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,27 @@
 /LAB07/dist/
 /LAB07_2/nbproject/private/
 /LAB07_2/build/
+/Pre-Midterm-P-Fewz/nbproject/private/
+/Pre-Midterm-AJ-Bank/nbproject/private/
+/Pre-Midterm-AJ-Bank/build/
+/Pre-Midterm-P-FewPz/nbproject/private/
+/Pre-Midterm-P-FewPz/build/
+/Pre-Midterm-P-FewPz/dist/
+/Test_Chap_8/nbproject/private/
+/Test_Chap_8/build/
+/Test_Chap_8/dist/
+/LAB08_3/nbproject/private/
+/LAB08_3/build/
+/LAB08_3/dist/
+/LAB08_04/nbproject/private/
+/LAB08_04/build/
+/LAB08_5/nbproject/private/
+/LAB08_5/build/
+/LAB08_06/nbproject/private/
+/LAB08_04/dist/
+/LAB08_06/build/
+/LAB09_02/nbproject/private/
+/LAB09_02/build/
+/LAB09_03/nbproject/private/
+/LAB09_03/build/
+/LAB09_02/dist/
