--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@
 /LAB09_03/nbproject/private/
 /LAB09_03/build/
 /LAB09_02/dist/
+/LAB10_1/nbproject/private/
+/LAB10_1/build/
+/LAB10_2/nbproject/private/
+/LAB10_2/build/
+/LAB10_3/nbproject/private/
+/LAB10_3/build/
+/LAB10_3/dist/
