--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@
 /LAB10_3/nbproject/private/
 /LAB10_3/build/
 /LAB10_3/dist/
+/LAB10_2/dist/
+/LAB11_1/nbproject/private/
+/LAB11_1/build/
+/LAB11_1/dist/
+/LAB11_2/nbproject/private/
+/LAB11_2/build/
