--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@
 /LAB11_1/dist/
 /LAB11_2/nbproject/private/
 /LAB11_2/build/
+/LAB11_2/dist/
+/LAB12_1/nbproject/private/
+/LAB12_1/build/
+/test/nbproject/private/
+/test/build/
