--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@
 /test/build/
 /LAB12_2/nbproject/private/
 /LAB12_2/build/
+/LAB13_1/nbproject/private/
+/LAB13_1/build/
+/LAB13_2/nbproject/private/
+/LAB13_2/build/
+/LAB13_3/nbproject/private/
+/LAB13_3/build/
