--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,11 @@
 /LAB13_2/build/
 /LAB13_3/nbproject/private/
 /LAB13_3/build/
+/LAB14/nbproject/private/
+/LAB14/build/
+/LAB14_02/nbproject/private/
+/LAB14_02/build/
+/LAB14_02/dist/
+/LAB_EXTRA(By P'Fewpz)/nbproject/private/
+/LAB_EXTRA(By P'Fewpz)/build/
+/Pre-Final-P-FewPz/build/
